# tinygen

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt
tinygen/agents/: sql_db_agent.py
tinygen/cmd/: sql_db_cmd.py
tinygen/common/: base_agent.py  base_llm.py  base_output_parser.py  base_tool.py
tinygen/llm/: llama_2_70b.py  llm_yi_34b.py
tinygen/output_parser/: sql_db_query.py
tinygen/tools/: query_database.py
