[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simplegen"
version = "0.0.1"
authors = [
  { name="liujinliu" },
]
description = "a simple tiny llm agent"
dependencies = [
    "requests",
    "sqlalchemy"
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.scripts]
sql-db-cmd="tinygen.cmd.sql_db_cmd:sql_db_cmd_run"
